welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:55: error: not found: value color
  color.YELLOW
  ^